reports/Sofware/ESP32/Introduction.err.log
Traceback (most recent call last):
  File "C:\Users\sacha\anaconda3\envs\game\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\jupyter_core\utils\__init__.py", line 160, in wrapped
    return loop.run_until_complete(inner)
  File "C:\Users\sacha\anaconda3\envs\game\lib\asyncio\base_events.py", line 649, in run_until_complete
    return future.result()
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\sacha\AppData\Roaming\Python\Python310\site-packages\nbclient\client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
config.toml
[build]
target = "xtensa-esp32-espidf"

[target.xtensa-esp32-espidf]
linker = "ldproxy"
runner = "espflash flash --monitor"
rustflags = [ "--cfg",  "espidf_time64"]

[unstable]
build-std = ["std", "panic_abort"]

[env]
MCU="esp32"
# Note: this variable is not used by the pio builder (`cargo build --features pio`)
ESP_IDF_VERSION = "v5.3.3"
# LIBCLANG_PATH = "$HOME/.espup/esp-clang"  # Rajout de cette ligne



rust-toolchain.toml
[toolchain]
channel = "esp"
Pas de Changement


sdkconfig.defaults
# Rust often needs a bit of an extra main task stack size compared to C (the default is 3K)
CONFIG_ESP_MAIN_TASK_STACK_SIZE=8000

# Use this to set FreeRTOS kernel tick frequency to 1000 Hz (100 Hz by default).
# This allows to use 1 ms granularity for thread sleeps (10 ms by default).
#CONFIG_FREERTOS_HZ=1000

# Workaround for https://github.com/espressif/esp-idf/issues/7631
#CONFIG_MBEDTLS_CERTIFICATE_BUNDLE=n
#CONFIG_MBEDTLS_CERTIFICATE_BUNDLE_DEFAULT_FULL=n


build.rs
fn main() {
    embuild::espidf::sysenv::output();
}

src/main.rs
Initialisation:
fn main() {
    // It is necessary to call this function once. Otherwise, some patches to the runtime
    // implemented by esp-idf-sys might not link properly. See https://github.com/esp-rs/esp-idf-template/issues/71
    esp_idf_svc::sys::link_patches();

    // Bind the log crate to the ESP Logging facilities
    esp_idf_svc::log::EspLogger::initialize_default();

    log::info!("Hello, world!");
}

Maintenant

------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    build-std = ["std", "panic_abort"][0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m cannot assign to expression here. Maybe you meant '==' instead of '='?

SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='? (3300579965.py, line 11)

